refactor: Make the header more mobile-like
- Reduce the size of the hamburger menu and logo.
- Make the header fixed.

--- a/css/app.css
+++ b/css/app.css
@@ -754,6 +754,21 @@ body {
     justify-content: space-between;
 }
 
+.logo-wrapper {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
 .header-logo-wrapper {
     font-size: 16px;
     display: -webkit-box;
@@ -877,7 +892,7 @@ body {
 .popup-menu-wrapper {
     min-width: 100px;
     margin-left: -105px;
-    margin-top: 7px;
+    margin-top: 5px;
 }
 
 
@@ -1326,13 +1341,30 @@ body {
 
 @media screen and (max-width:500px) {
     .position-center {
-        padding: 15px;
+        padding: 10px 15px;
     }
     .nav-expanded-wrapper {
         display: none;
     }
     .nav-compact-wrapper {
         display: block;
+        font-size: 18px;
+    }
+    .header-wrapper {
+        border-bottom: 1px solid #dfe2e5;
+        background: white;
+        position: fixed;
+        z-index: 1;
+    }
+    .header-logo-wrapper {
+        width: 18px;
+        height: 18px;
+    }
+    .popup-menu-wrapper {
+        margin-top: 5px;
+    }
+    .main-content-wrapper {
+        margin-top: 40px;
     }
 }
 
