--- a/css/app.css
+++ b/css/app.css
@@ -1015,7 +1015,18 @@ body {
 .message-text-workcallout {
     padding: 20px;
     border-radius: 5px;
-    background: #f6f6f6;
+    background: #f9f9f9;
+}
+
+.code-name {
+    font: bold 85% SFMono-Regular, Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    margin: 0;
+    border-radius: 3px;
+    padding: 0.2em 0;
+}
+
+.code-name-color {
+    color: #4280eb;
 }
 
 
@@ -1096,7 +1107,7 @@ body {
     display: flex;
     width: 100%;
     padding: 7px;
-    background: #f2f2f2;
+    background: #fafafa;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -webkit-flex-flow: row nowrap;
