--- a/css/source/styles.css
+++ b/css/source/styles.css
@@ -217,7 +217,20 @@ body {
 .message-text-workcallout {
     padding: 20px;
     border-radius: 5px;
-    background: #f6f6f6;
+    background: #f9f9f9;
+}
+
+.code-name {
+    margin: 0;
+    border-radius: 3px;
+    padding: 0.2em 0;
+    font-size: 85%;
+    font-weight: bold;
+    font-family: SFMono-Regular,Consolas,"Liberation Mono",Menlo,Courier,monospace;
+}
+
+.code-name-color {
+    color: #4280eb;
 }
 
 
@@ -289,7 +302,7 @@ body {
     display: flex;
     width: 100%;
     padding: 7px;
-    background: #f2f2f2;
+    background: #fafafa;
     flex-flow: row nowrap;
     justify-content: center;
 }
