--- a/css/app.css
+++ b/css/app.css
@@ -892,6 +892,7 @@ body {
 .popup-menu-wrapper {
     /*min-width: 100px;*/
     /*min-width: auto;*/
+    width: 110px;
     margin-left: -100px;
     margin-top: 9px;
 }
